--- a/WiFiCon_ESP8266/WiFiCon_ESP8266.vcxproj.filters
+++ b/WiFiCon_ESP8266/WiFiCon_ESP8266.vcxproj.filters
@@ -24,5 +24,13 @@
     <ClInclude Include="__vm\.WiFiCon_ESP8266.vsarduino.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="can_buffer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="can_buffer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
